2.19
- recognize some missing wireless drivers (mga#16768)

2.18
- recognize new kernel-4.6 drivers

2.17
- recognize new kernel-4.4 drivers

2.16
- recognize new kernel-4.3 drivers

2.15
- recognize new kernel-4.1 drivers

2.14
- network.c: fix -Werror=logical-not-parentheses

2.13
- when updating pcmcia ids kernel module aliases, in case of not finding any
  pcmcia modules aliases from the most recent kernel module tree, move on to
  next most recent kernel module tree found.

2.12
- recognize new kernel-3.19 drivers

2.11
- recognize new kernel-3.18 drivers (mga#14799)

2.10
- include new 3.18 USB host drivers (mga#14799)

- recognize new kernel-3.17 drivers
- recognize hyper-v network card
- recognize new kernel-3.16 drivers
- stop creating /dev entries now that we use udev
- recognize new kernel-3.15 drivers

Version 2.7  - 14 Juni 2014, by Per Øyvind Karlsen

- rebuild for new codename
- recognize new kernel-3.14 drivers

Version 2.6 - 19 December, by Per Øyvind Karlsen

- fix incorrect check against size of pointer rather than dereference it first
  (-Wsizeof-pointer-memaccess)

Version 2.5 - 17 November, by Per Øyvind Karlsen

- bring back pixel's holy shotgun algorithm for unmounting when rebooting in
  order to ensure we really try to get all disks unmounted
- load modules for usb controllers and hid devices in rescue mode as well,
  otherwise you'll easily find yourself standing there looking st00pid without
  any ability to use the keyboard.. :p

Version 2.4 - 28 October 2013, by Per Øyvind Karlsen

- detect new kernel-3.12 modules

Version 2.3 -  6 May 2013, by Per Øyvind Karlsen

- follow ldetect api changes wrt. kmodules from modalias vs pcitable

Version 2.2 - 31 March 2013, by Per Øyvind Karlsen

- probe virtual drivers too (mga#9546)
  (install from Xen hd not supported yet)
- load hid_generic module
- update list_modules for xen dom0 and virtio support (#9242)

Version 2.1 -  5 Februar 2013, by Per Øyvind Karlsen
