@@ -1,3 +1,5 @@
+- fix description of network interfaces (mga#15638)
+
 2.19
 - recognize some missing wireless drivers (mga#16768)
 
